--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
   top: 0;
   left: 0;
 }
-.image1 {
+.image1{
   position: relative;
   top: 25px;
   left: 0px;
@@ -21,9 +21,9 @@ body {
     width: 1900px;
 }
 .image2 {
-  position: fixed;
-  top: 10px;
-  left: 180px;
+  position: relative;
+  top: -900px;
+  left: 0;
   height: 900px;
   width: 2300px;
 }
@@ -44,31 +44,7 @@ body {
 h1{
  color: #ffffff; 
 }
-
-			.column1 {
-			  background-color: #d9d9d9;
-				width: 31.3%;
-        height: 5cm;
-				float: left;
-				margin: 1%;}
-			.column3 {
-				margin-right: 0%;}
-
-       .column2{
-			  background-color: #444444;
-				width: 31.3%;
-         height: 5cm;
-				float: left;
-				margin: 1%;}
-
-       .column3 {
-			  background-color: #ffffff;
-				width: 31.3%;
-         height: 5cm;
-				float: left;
-				margin: 1%;}
-			.column3 {
-				margin-right: 0%;}
+		
 		
 
 			li {
@@ -90,5 +66,3 @@ h2 ,h1, a{
    font-style: normal; 
 }
 }
-
-
