--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 body {
    background-image:url("http://www.clubedeexperiencias.com.br/static/admin/images/gallery/destinos/black-39844.jpg");
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size:contain;
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
 
   text-align:center;
 }
