--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 body {
    background-image:url("http://www.clubedeexperiencias.com.br/static/admin/images/gallery/destinos/black-39844.jpg");
    background-position: center;
-   background-repeat: no-repeat;
-   background-size: cover;
+    background-repeat: no-repeat;
+    background-size: cover;
 
   text-align:center;
 }
@@ -40,7 +40,11 @@ body {
 				overflow: auto;}
 
 			#nav, #feature, #footer {
-				margin: 1%;}
+				margin: 1%;
+}
+#nav{
+  margin-top:-930px;
+}
 h1{
  color: #ffffff; 
 }
@@ -48,6 +52,7 @@ h1{
 		
 
 			li {
+			  
 				display: inline;
 				padding: 0.5em;}
 			#nav, #footer {
@@ -66,3 +71,6 @@ h2 ,h1, a{
    font-style: normal; 
 }
 }
+
+
+
