--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ h1{
 
 
 
- a{ 
+ a, p{ 
    font-family: 'JelleeRoman'; 
    font-weight: normal; 
    font-style: normal; 
@@ -76,9 +76,6 @@ h1{
    font-size:1000%;
   text-shadow: 5px 2px #ffc9c9;
   text-align:center;
-}
-p{
-	text-align:center;
 }
 
 
