--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,14 @@ h1{
   text-align:center;
 }
 
-
+.panel {
+  position: fixed;
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+  width: 50%;
+  background: green;
+}
 
 
 
